--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Lint 🧐
         run: npm run lint
 
-      - name: Build 🏗️
+      - name: Build
         run: npm run build
 
       - name: Test 🚨
